working on getting graphicsmagick integrated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,11 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x -Wall -Wextra -Werror")
 set(GLM_ROOT_DIR "/home/agrippa/sdks/glm_0.9.4.5")
+set(GraphicsMagick_ROOT_DIR "/home/agrippa/sdks/Graphics-Magick_1.3.18")
 
 enable_testing()
 
 include_directories(${Ray_SOURCE_DIR}/include)
-
-find_package(GLM REQUIRED)
-include_directories(${GLM_INCLUDE_DIRS})
 
 find_package(GLM REQUIRED)
 include_directories(${GLM_INCLUDE_DIRS})
