cmake happy, tests  working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(Ray)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x -Wall -Wextra -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Werror")
 set(GLM_ROOT_DIR "/home/agrippa/sdks/glm_0.9.4.5")
-set(GraphicsMagick_ROOT_DIR "/home/agrippa/sdks/Graphics-Magick_1.3.18")
+set(GraphicsMagick++_ROOT_DIR "/home/agrippa/sdks/Graphics-Magick_1.3.18")
 
 enable_testing()
 
@@ -14,8 +14,9 @@ include_directories(${Ray_SOURCE_DIR}/include)
 find_package(GLM REQUIRED)
 include_directories(${GLM_INCLUDE_DIRS})
 
-find_package(GraphicsMagick REQUIRED)
-include_directories(${GraphicsMagick_INCLUDE_DIRS})
+find_package(GraphicsMagick++ REQUIRED)
+include_directories(${GraphicsMagick++_INCLUDE_DIRS})
+set(LIBS ${LIBS} ${GraphicsMagick++_LIBRARIES})
 
 add_subdirectory(src)
 add_subdirectory(tests)
