--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,11 +13,22 @@ add_executable(parse_utils_test parse_utils_test.cpp
 add_executable(image_test image_test.cpp ${Ray_SOURCE_DIR}/src/image.cpp)
 add_executable(image_storage_test image_storage_test.cpp 
                                   ${Ray_SOURCE_DIR}/src/image.cpp)
-
+add_executable(scene_loader_test scene_loader_test.cpp 
+                                  ${Ray_SOURCE_DIR}/src/camera.cpp
+                                  ${Ray_SOURCE_DIR}/src/geometry.cpp
+                                  ${Ray_SOURCE_DIR}/src/image.cpp
+                                  ${Ray_SOURCE_DIR}/src/light.cpp
+                                  ${Ray_SOURCE_DIR}/src/material.cpp
+                                  ${Ray_SOURCE_DIR}/src/mesh.cpp
+                                  ${Ray_SOURCE_DIR}/src/scene.cpp
+                                  ${Ray_SOURCE_DIR}/src/scene_utils.cpp
+                                  ${Ray_SOURCE_DIR}/src/texture.cpp)
 target_link_libraries(parse_utils_test  gtest gtest_main)
 target_link_libraries(image_test  ${LIBS} gtest gtest_main)
 target_link_libraries(image_storage_test  ${LIBS} gtest gtest_main)
+target_link_libraries(scene_loader_test  ${LIBS} gtest gtest_main)
 
 add_test(parse_utils_test parse_utils_test)
 add_test(image_test image_test)
 add_test(image_storage_test image_storage_test)
+add_test(scene_loader_test scene_loader_test)
