--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,7 +24,8 @@ add_executable(scene_loader_test scene_loader_test.cpp
                                   ${Ray_SOURCE_DIR}/src/ray.cpp
                                   ${Ray_SOURCE_DIR}/src/scene.cpp
                                   ${Ray_SOURCE_DIR}/src/scene_utils.cpp
-                                  ${Ray_SOURCE_DIR}/src/texture.cpp)
+                                  ${Ray_SOURCE_DIR}/src/texture.cpp
+                                  ${Ray_SOURCE_DIR}/src/transform.cpp)
 target_link_libraries(parse_utils_test  gtest gtest_main)
 target_link_libraries(image_test  ${LIBS} gtest gtest_main)
 target_link_libraries(image_storage_test  ${LIBS} gtest gtest_main)
