--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,20 @@ project(Ray)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Werror")
+site_name(BUILD_SITE_NAME)
+set(UTCS_SITE_NAME "shadow.csres.utexas.edu")
+message(STATUS "site_name = ${BUILD_SITE_NAME}")
+if(BUILD_SITE_NAME STREQUAL UTCS_SITE_NAME)
+set(GLM_ROOT_DIR "/home/agrippa/sdks/glm_0.9.4.5")
+set(GraphicsMagick++_ROOT_DIR "/home/agrippa/sdks/Graphics-Magick_1.3.18")
+set(BOOST_ROOT "/home/agrippa/sdks/boost_1.54.0")
+set(ASSIMP_ROOT_DIR "/home/agrippa/sdks/assimp_3.0.1270")
+else()
 set(GLM_ROOT_DIR "/u/agrippa/sdks/glm_0.9.4.5")
 set(GraphicsMagick++_ROOT_DIR "/u/agrippa/sdks/Graphics-Magick_1.3.18")
 set(BOOST_ROOT "/u/agrippa/sdks/boost_1.54.0")
 set(ASSIMP_ROOT_DIR "/u/agrippa/sdks/assimp_3.0")
+endif()
 enable_testing()
 
 include_directories(${Ray_SOURCE_DIR}/include)
