--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,17 @@ site_name(BUILD_SITE_NAME)
 set(UTCS_SITE_NAME "shadow.csres.utexas.edu")
 message(STATUS "site_name = ${BUILD_SITE_NAME}")
 if(BUILD_SITE_NAME STREQUAL UTCS_SITE_NAME)
-  set(GLM_ROOT_DIR "/home/agrippa/sdks/glm_0.9.4.5")
+  set(GLM_ROOT_DIR "/home/agrippa/sdks/glm_0.9.5.2")
   set(GraphicsMagick++_ROOT_DIR "/home/agrippa/sdks/Graphics-Magick_1.3.18")
   set(BOOST_ROOT "/home/agrippa/sdks/boost_1.54.0")
   set(ASSIMP_ROOT_DIR "/home/agrippa/sdks/assimp_3.0.1270")
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  set(GLM_ROOT_DIR "/home/agrippa/sdks/glm_0.9.4.5")
-  set(GraphicsMagick++_ROOT_DIR "/home/agrippa/sdks/Graphics-Magick_1.3.18")
-  set(BOOST_ROOT "/home/agrippa/sdks/boost_1.54.0")
-  set(ASSIMP_ROOT_DIR "/home/agrippa/sdks/assimp_3.0.1270")
+  set(GLM_ROOT_DIR "/opt/local/include/glm")
+  set(GraphicsMagick++_ROOT_DIR "/opt/local/include/GraphicsMagick")
+  set(BOOST_ROOT "/opt/local/include/boost/")
 else()
-  message("Building on UTCS depatmental machine")
-  set(GLM_ROOT_DIR "/u/agrippa/sdks/glm_0.9.4.5")
+  message("Building on UTCS departmental machine")
+  set(GLM_ROOT_DIR "/u/agrippa/sdks/glm_0.9.5.2")
   set(GraphicsMagick++_ROOT_DIR "/u/agrippa/sdks/Graphics-Magick_1.3.18")
   set(BOOST_ROOT "/u/agrippa/sdks/boost_1.54.0")
   set(ASSIMP_ROOT_DIR "/u/agrippa/sdks/assimp_3.0")
