make it compile

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -32,7 +32,27 @@ add_executable(grid_test grid_test.cpp
 add_executable(image_storage_test image_storage_test.cpp 
                                   ${Ray_SOURCE_DIR}/src/image.cpp)
 add_executable(image_test image_test.cpp ${Ray_SOURCE_DIR}/src/image.cpp)
+add_executable(kdtree_test kdtree_test.cpp 
+                                  ${Ray_SOURCE_DIR}/src/accelerator.cpp
+                                  ${Ray_SOURCE_DIR}/src/camera.cpp
+                                  ${Ray_SOURCE_DIR}/src/geometry.cpp
+                                  ${Ray_SOURCE_DIR}/src/grid.cpp
+                                  ${Ray_SOURCE_DIR}/src/io_utils.cpp
+                                  ${Ray_SOURCE_DIR}/src/image.cpp
+                                  ${Ray_SOURCE_DIR}/src/kdnode64.cpp
+                                  ${Ray_SOURCE_DIR}/src/light.cpp
+                                  ${Ray_SOURCE_DIR}/src/material.cpp
+                                  ${Ray_SOURCE_DIR}/src/mesh.cpp
+                                  ${Ray_SOURCE_DIR}/src/ray.cpp
+                                  ${Ray_SOURCE_DIR}/src/raytracer.cpp                              
+                                  ${Ray_SOURCE_DIR}/src/scene.cpp
+                                  ${Ray_SOURCE_DIR}/src/scene_utils.cpp
+                                  ${Ray_SOURCE_DIR}/src/shape.cpp
+                                  ${Ray_SOURCE_DIR}/src/texture.cpp
+                                  ${Ray_SOURCE_DIR}/src/transform.cpp
+                                  ${Ray_SOURCE_DIR}/src/types.cpp)
 add_executable(octree_test octree_test.cpp
+                                  ${Ray_SOURCE_DIR}/src/accelerator.cpp
                                   ${Ray_SOURCE_DIR}/src/camera.cpp
                                   ${Ray_SOURCE_DIR}/src/geometry.cpp
                                   ${Ray_SOURCE_DIR}/src/io_utils.cpp
@@ -70,6 +90,7 @@ add_executable(raytracer_test raytracer_test.cpp
                                   ${Ray_SOURCE_DIR}/src/transform.cpp
                                   ${Ray_SOURCE_DIR}/src/types.cpp)
 add_executable(sah_octree_test sah_octree_test.cpp 
+                                  ${Ray_SOURCE_DIR}/src/accelerator.cpp
                                   ${Ray_SOURCE_DIR}/src/camera.cpp
                                   ${Ray_SOURCE_DIR}/src/geometry.cpp
                                   ${Ray_SOURCE_DIR}/src/grid.cpp
@@ -87,8 +108,7 @@ add_executable(sah_octree_test sah_octree_test.cpp
                                   ${Ray_SOURCE_DIR}/src/shape.cpp
                                   ${Ray_SOURCE_DIR}/src/texture.cpp
                                   ${Ray_SOURCE_DIR}/src/transform.cpp
-                                  ${Ray_SOURCE_DIR}/src/types.cpp)
-                                  
+                                  ${Ray_SOURCE_DIR}/src/types.cpp)                             
 add_executable(scene_loader_test scene_loader_test.cpp 
                                   ${Ray_SOURCE_DIR}/src/camera.cpp
                                   ${Ray_SOURCE_DIR}/src/geometry.cpp
@@ -110,6 +130,7 @@ add_executable(scene_loader_test scene_loader_test.cpp
 target_link_libraries(grid_test  ${LIBS} gtest gtest_main)
 target_link_libraries(image_storage_test  ${LIBS} gtest gtest_main)
 target_link_libraries(image_test  ${LIBS} gtest gtest_main)
+target_link_libraries(kdtree_test  ${LIBS} gtest gtest_main)
 target_link_libraries(octree_test  ${LIBS} gtest gtest_main)
 target_link_libraries(parse_utils_test  gtest gtest_main)
 target_link_libraries(raytracer_test  ${LIBS} gtest gtest_main)
@@ -119,6 +140,7 @@ target_link_libraries(scene_loader_test  ${LIBS} gtest gtest_main)
 add_test(grid_test grid_test)
 add_test(image_test image_test)
 add_test(image_storage_test image_storage_test)
+add_test(kdtree_test kdtree_test)
 add_test(parse_utils_test parse_utils_test)
 add_test(raytracer_test raytracer_test)
 add_test(sah_octree_test sah_octree_test)
